--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "5659d14b-24aa-460b-add7-69a998b9e270"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
